--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="./favicon.png">
   <title>Ego</title>
-  <link rel="stylesheet" href="./css/theme_brown.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/footer.css">
   <style>
     html {
       height: 100%;
-      line-height: 2;
       background-color: #3EECAC;
       background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
     }
     body {
-      margin: 0;
+      line-height: 2;
     }
     h1 {
       height: 80px;
@@ -43,18 +43,6 @@
       padding: .25em 1em;
       vertical-align: top;
       z-index: 1;
-    }
-    footer {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      text-align: center;
-      color: var(--card-tag-txet-color);
-    }
-    footer p {
-      margin: 0;
-      padding: 1em;
     }
   </style>
 </head>
