完成导航页的dom搭建

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <h1>Ego</h1>
   <div class="btn">
-    <a href="./resume/resume.html">芝麻开门</a>
+    <a href="./nav/nav.html">芝麻开门</a>
   </div>
   <footer>
     <p><small>© copyright 2020 ChenZhongyi</small></p>
