--- a/resume/resume.html
+++ b/resume/resume.html
@@ -13,8 +13,8 @@
       <a id="navBar" class="navbar collapse" data-collapse="1"></a>
       <ul id="navUl" class="collapse">
         <li><a href="#">博 客</a></li>
-        <li><a href="#">作 品</a></li>
-        <li><a href="#">导 航</a></li>
+        <li><a href="../case/case.html">作 品</a></li>
+        <li><a href="../nav/nav.html">导 航</a></li>
         <li class="active"><a href="#">简 历</a></li>
       </ul>
     </nav>
@@ -101,6 +101,6 @@
       }
     }());
   </script>
-  <script src="resume.js"></script>
+  <script src="../js/header.js"></script>
 </body>
 </html>
