完成2048小游戏的页面布局以及显示样式

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -101,6 +101,7 @@
       }
     }());
   </script>
+  <script src="../js/utils.js"></script>
   <script src="../js/header.js"></script>
 </body>
 </html>
