--- a/nav/nav.html
+++ b/nav/nav.html
@@ -77,6 +77,7 @@
   <footer>
     <p><small>© copyright 2020 ChenZhongyi</small></p>
   </footer>
+  <script src="../js/utils.js"></script>
   <script src="../js/header.js"></script>
 </body>
 </html>
