将 2048 小游戏添加到案例页面中

--- a/case/case.html
+++ b/case/case.html
@@ -19,7 +19,17 @@
       </ul>
     </nav>
   </header>
-  
+  <div class="works-container" data-enable-scroll="1">
+    <ul class="works">
+      <li class="works-item">
+        <a class="works-item__cover works-item__2048" href="./2048/2048.html"></a>
+        <p class="works-item__desc">小游戏，用于IT教学哦~什么时候无聊了，就可以玩两下，看你能不能熬到2048！</p>
+      </li>
+      <li class="works-item empty"></li>
+      <li class="works-item empty"></li>
+      <li class="works-item empty"></li>
+    </ul>
+  </div>
   <footer>
     <p><small>© copyright 2020 ChenZhongyi</small></p>
   </footer>
