--- a/nav/nav.html
+++ b/nav/nav.html
@@ -59,17 +59,11 @@
       </a>
     </dd>
     <i></i><!-- i 为布局占位符，不能删 -->
-    <dt class="">HowAreYou</dt>
+    <dt class="">前端小工具</dt>
     <dd>
-      <a href="" target="_blank" rel="nofollow" title="">
-        <img src="https://via.placeholder.com/150">
-        1
-      </a>
-    </dd>
-    <dd>
-      <a href="" target="_blank" rel="nofollow" title="">
-        <img src="https://via.placeholder.com/150">
-        2
+      <a href="https://svg.wxeditor.com/" target="_blank" rel="nofollow" title="SVG 在线编辑器">
+        <img src="data:image/svg+xml,%3Csvg viewBox='0 0 27 27' xmlns='http://www.w3.org/2000/svg' width='15' height='15' xmlns:xlink='http://www.w3.org/1999/xlink' class='svg_icon'%3E%3Csvg viewBox='0 0 16 16'%3E%3Cpath d='M-.097 16.104L16.004.035v16.07h-16.1z' fill='%23ccc'/%3E%3Cpath d='M.004 16.104v-16l16 16h-16z' fill='%23666'/%3E%3C/svg%3E%3C/svg%3E">
+        SVG 在线编辑器
       </a>
     </dd>
     <i></i><!-- i 为布局占位符，不能删 -->
