新增脚本让网页无法被其他网页嵌套

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="shortcut icon" href="./favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
   <title>Ego</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <script src="js/necessary.js"></script>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/footer.css">
   <style>
     html {
       height: 100%;
@@ -49,7 +50,7 @@
 <body>
   <h1>Ego</h1>
   <div class="btn">
-    <a href="./nav/nav.html">芝麻开门</a>
+    <a href="nav/nav.html">芝麻开门</a>
   </div>
   <footer>
     <p><small>© copyright 2020 ChenZhongyi</small></p>
