--- a/nav/nav.html
+++ b/nav/nav.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="../favicon.png">
   <title>Ego Nav</title>
+  <script src="../js/necessary.js"></script>
   <link rel="stylesheet" href="../css/flex.css">
   <link rel="stylesheet" href="nav.css">
 </head>
