新增 meta 标签防止页面被嵌入其他网页中

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-FRAME-OPTIONS" content="DENY">
   <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="favicon.png">
   <title>Ego</title>
